[tool.poetry]
name = "hashtableanalysis"
version = "0.1.0"
description = "#️⃣ Hashtable implementation and analysis."
authors = ["Kowies <kowieski.m98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
sphinx = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.14.0"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
